[project]
name = "sasta-dpi"
version = "0.1.0"
description = "A powerful TUI for network security professionals to craft and send custom packets"
authors = [{name = "ShreyasDr71"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "scapy>=2.5.0",
    "httpx>=0.27.0",
    "dnspython>=2.6.0",
    "click>=8.1.0",
]

[project.scripts]
sasta-dpi = "sasta_dpi.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
